--- a/cd.ContosoAir.yml
+++ b/cd.ContosoAir.yml
@@ -8,7 +8,7 @@ trigger:
 resources:
  pipelines:
   - pipeline: buildContosoAir # identifier for the resource used in pipeline resource variables
-    source: Student1-44233179.ContosoAir # name of the pipeline that produces the artifact
+    source: artsave.ContosoAir # name of the pipeline that produces the artifact
     trigger:
      branches:
       include:
